...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Nombres"
                app:boxBackgroundColor="@color/light_blue"
                app:helperText="@string/required"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNamesInfoPersonal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Apellidos"
                app:boxBackgroundColor="@color/light_blue"
                android:textColorHint="@color/dark_gray"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastNamesInfoPersonal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "E-mail"
                app:boxBackgroundColor="@color/light_blue"
                android:textColorHint="@color/dark_gray"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMailInfoPersonal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDocType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Número de identificación"
                app:boxBackgroundColor="@color/light_blue"
                android:textColorHint="@color/dark_gray"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDocNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Teléfono de contacto"
                app:boxBackgroundColor="@color/light_blue"
                android:textColorHint="@color/dark_gray"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Dirección"
                app:boxBackgroundColor="@color/light_blue"
                android:textColorHint="@color/dark_gray"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Fecha de nacimiento"
                app:boxBackgroundColor="@color/light_blue"
                android:textColorHint="@color/dark_gray"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "País o región"
                app:boxBackgroundColor="@color/light_blue"
                android:textColorHint="@color/dark_gray"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Ciudad"
                app:boxBackgroundColor="@color/light_blue"
                android:textColorHint="@color/dark_gray"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Idioma"
                app:boxBackgroundColor="@color/light_blue"
                android:textColorHint="@color/dark_gray"
...

        <Button
            android:id="@+id/btnSaveInfoPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
