...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Nombre del cargo"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/light_blue"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Descripcíón de la empresa"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/light_blue"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Área de trabajo"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/light_blue"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Nombre de la empresa"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/light_blue"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOrganization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Princicipales funciones"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/light_blue"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etActivities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Fecha de ingreso"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/light_blue"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDateFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Fecha de salida"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/light_blue"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDateTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
