...
            <!-- Titulo  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Titulo obtenido"
                app:boxBackgroundColor="@color/light_blue"
                app:helperText="@string/required"
                android:textColorHint="@color/dark_gray"
                app:helperTextTextColor="@color/dark_yellow"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Institución  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiInstitution"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Institución"
                app:boxBackgroundColor="@color/light_blue"
                app:helperText="@string/required"
                android:textColorHint="@color/dark_gray"
                app:helperTextTextColor="@color/dark_yellow"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInstitution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Fecha inicio  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiBeginDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Fecha de inicio"
                app:boxBackgroundColor="@color/light_blue"
                app:helperText="@string/required"
                android:textColorHint="@color/dark_gray"
                app:helperTextTextColor="@color/dark_yellow"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBeginDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Fecha fin  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiEndDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Fecha de finalización"
                app:boxBackgroundColor="@color/light_blue"
                app:helperText="@string/required"
                android:textColorHint="@color/dark_gray"
                app:helperTextTextColor="@color/dark_yellow"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Tipo de estudio  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiStudyType"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "Tipo de estudio"
                app:boxBackgroundColor="@color/light_blue"
                app:helperText="@string/required"
                android:textColorHint="@color/dark_gray"
                app:helperTextTextColor="@color/dark_yellow"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStudyType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btnSaveInfoAcademica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guardar"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_yellow" />

...
