...
                app:helperTextTextColor="@color/dark_yellow"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNamesRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext" />
            </com.google.android.material.textfield.TextInputLayout>

...
                app:helperTextTextColor="@color/dark_yellow"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastNamesRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEmailAddress"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

...
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiMailRegistro"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/dark_gray"
                android:hint="E-Mail"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/light_blue"
                app:helperText="@string/required"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:helperTextTextColor="@color/dark_yellow"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMailRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

...
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiPasswordRegistro"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/dark_gray"
                android:hint="Password"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/light_blue"
                app:helperText="@string/required"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:helperTextTextColor="@color/dark_yellow"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

...
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiConfirmPasswordRegistro"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/dark_gray"
                android:hint="ConfirmPassword"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/light_blue"
                app:helperText="@string/required"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:helperTextTextColor="@color/dark_yellow"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPasswordRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>



        <Button
            android:id="@+id/btnNextPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="siguiente"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60sp"
            android:textColor="@color/white"
...
